2003-07-15  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Fix a typo when reporting "forbidden" m4 macros.

2003-06-20  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Fix some strangeness in the gnome-doc-common test.

2003-06-19  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* autogen.sh: Inserted missing "cd $dirname" to effectively
	process subdirectories, since all it was doing was to process the
	toplevel dir multiple times.

	[Editor's note: also reported with patch by Elijah Newren in bug
	#115481.]

2003-05-21  Malcolm Tredinnick <malcolm@commsecure.com.au>

	* autogen.sh: Ignore {arch} subdirectories. Fixes bug #113327.

2003-05-04  Malcolm Tredinnick <malcolm@commsecure.com.au>
	
	* autogen.sh:
	- Make this portable to Bourne-like shells. Fixes the problems
	  pointed out by Morten Welinder in bug #110177.
	- Extend the check_m4macros() function to handle Cygwin
	  environments. Fixes bug #110947.

2003-04-10  Ross Burton  <ross@burtonini.com>

	* autogen.sh: Fix a typo in the glib-gettext checks.

2003-03-07  Malcolm Tredinnick <malcolm@commsecure.com.au>
	
	* autogen.sh: Replace PACKAGE with PKG_NAME, since PKG_NAME is
	what is defined by the various applications' autogen.sh. Also,
	call autopoint rather than gettextize when appropriate (when
	AM_GNU_GETTEXT_VERSION is present).

2003-02-27  Mark McLoughlin  <mark@skynet.ie>

	* compiler-flags.m4: fix mixed up order of arguments to
	AC_ARG_ENABLE that made --enable-compile-warnings not work
	as expected.

2003-02-24  James Henstridge  <james@daa.com.au>

	* autogen.sh (forbid_m4macro): add function to forbid m4 macros.
	Forbid gnome-cxx-check.m4, to try and catch setups where stale
	macros are left on the system.

2003-02-21  James Henstridge  <james@daa.com.au>

	* autogen.sh (version_check): if $variable is set, then assume
	it is correct and skip the version check.
	(autoconf): check for autoconf2.50 first, so we don't trigger